--- a/hahaha/hahaha.csproj
+++ b/hahaha/hahaha.csproj
@@ -80,6 +80,9 @@
   <ItemGroup>
     <Compile Include="Assets\move.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\yinying.shader" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
 </Project>
